[package]
name = "onnx-model"
version = "0.1.0"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
onnxruntime = {version="0.1", git="https://github.com/andreytkachenko/onnxruntime-rs.git"}
lazy_static = "1.4.0"
glob = "0.3.0"
smallvec = "1.6.1"
rustacuda = {version = "0.1.2", optional = true}
ndarray = "0.14.0"
arrayvec = "0.5.2"

[features]
cuda = ["rustacuda"]
tensorrt = []
