[package]
name = "onnx-model"
version = "0.2.0"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
edition = "2018"
description = "ONNX Inference Model Executor Abstraction"
tags = ["onnx", "onnxruntime", "inference", "tract"]

[dependencies]
thiserror = "1"
lazy_static = "1.4"
smallvec = "1.6"
ndarray = "0.14"
arrayvec = "0.5"
smallstr = "0.2"

rustacuda = {version = "0.1", optional = true}
onnxruntime = {version="0.1", git="https://github.com/andreytkachenko/onnxruntime-rs.git", optional = true}

[features]
default = ["ort-backend"]
cuda = ["rustacuda"]
tensorrt = []
ort-backend = ["onnxruntime"]
# tract-backend = ["tract"]

[dev-dependencies]
image = "0.23.12"
ndarray-stats = "0.4.0"
