[package]
name = "onnx-model"
version = "0.2.3"
authors = ["Andrey Tkachenko <andrey@aidev.ru>"]
edition = "2018"
description = "ONNX Inference Model Executor Abstraction"
keywords = ["onnx", "onnxruntime", "inference", "tract"]
repository = "https://github.com/andreytkachenko/onnx-model"
license = "Apache-2.0/MIT"

[dependencies]
thiserror = "1"
lazy_static = "1.4"
smallvec = "1.6"
ndarray = "0.14"
arrayvec = "0.5"
smallstr = "0.2"

rustacuda = {version = "0.1", optional = true}
onnxruntime = {git="https://github.com/andreytkachenko/onnxruntime-rs.git", branch="v1.7", optional = true}

[features]
default = ["ort-backend"]
cuda = ["rustacuda"]
tensorrt = []
ort-backend = ["onnxruntime"]
# tract-backend = ["tract"]

[dev-dependencies]
image = "0.23.12"
ndarray-stats = "0.4.0"
